--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.10.0"
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "dependencies": {
-    "express": "3.5.1",
-    "eventproxy": "0.2.6",
-    "connect-flash": "0.1.1",
-    "nodemailer": "0.7.1",
-    "mongoose": "3.8.8",
-    "validator": "3.16.1",
-    "ejs": "0.8.4",
-    "moment": "2.7.0",
-    "gm": "1.16.0",
-    "xss": "0.1.10",
-    "cheerio":"0.17.0",
     "async": "0.9.0",
-    "xss-filters": "1.1.1",
+    "bosonnlp": "0.0.9",
+    "cheerio": "0.17.0",
+    "connect-flash": "0.1.1",
     "connect-redis": "0.12.1",
+    "ejs": "0.8.4",
+    "eventproxy": "0.2.6",
+    "express": "3.5.1",
+    "gm": "1.16.0",
     "ioredis": "1.5.5",
     "lodash": "3.9.3",
-    "request":"2.58.0",
-    "marked":"0.3.5",
-    "bosonnlp":"0.0.9"
+    "marked": "0.3.5",
+    "moment": "2.7.0",
+    "mongoose": "3.8.8",
+    "nodemailer": "0.7.1",
+    "request": "2.58.0",
+    "validator": "3.16.1",
+    "xss": "0.1.10",
+    "xss-filters": "1.1.1"
   }
 }
